# ferruginous

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  LICENSE  Makefile  PROJECT_VISION.md  README.md  ROADMAP.md  audit_log.txt  audit_report.md  rustfmt.toml
.agent/: GEMINI.md  hardening_rules.md  reflections.md
.antigravity/: mcp_config.json  rules.md
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.legacy/: README.md  ROADMAP.md
crates/fepdf/: Cargo.toml
crates/fepdf/src/: main.rs
crates/ferruginous/: Cargo.toml
crates/ferruginous-bridge-legacy/: Cargo.toml  README.md
crates/ferruginous-bridge-legacy/src/: lib.rs
crates/ferruginous-bridge-legacy/src/lopdf/: document.rs  mod.rs  object.rs  reader.rs  xref.rs
crates/ferruginous-bridge-legacy/src/lopdf/encryption/: algorithms.rs  mod.rs  rc4.rs
crates/ferruginous-bridge-legacy/src/lopdf/parser/: lexical.rs  mod.rs
crates/ferruginous-bridge-legacy/tests/: legacy_regression.rs
crates/ferruginous-cli/: Cargo.toml
crates/ferruginous-cli/src/: main.rs
crates/ferruginous-core/: Cargo.toml  README.md
crates/ferruginous-core/src/: arena.rs  content.rs  document.rs  error.rs  filters.rs  graphics.rs  handle.rs  lexer.rs  lib.rs  metadata.rs  object.rs  parser.rs  schema_tests.rs  security.rs  sublimation.rs  types.rs
crates/ferruginous-core/src/audit/: compliance.rs
crates/ferruginous-core/src/color/: mod.rs
crates/ferruginous-core/src/document/: conformance.rs  page.rs  strategy.rs  structure.rs
crates/ferruginous-core/src/filters/: dct.rs  flate.rs  mod.rs  predict.rs  predictor.rs  run_length.rs
crates/ferruginous-core/src/font/: agl.rs  cff_standard.rs  cmap.rs  loader.rs  mapping_tests.rs  metrics.rs  mod.rs  reconstruction.rs  rescue.rs  schema.rs  subset.rs
crates/ferruginous-core/src/graphics/: mod.rs  schema.rs
crates/ferruginous-core/src/ingest/: discovery.rs  mod.rs
crates/ferruginous-core/src/object/: sublimation.rs
crates/ferruginous-core/src/object/sublimation/: parser.rs  resurrection.rs  serializer.rs
crates/ferruginous-core/src/refine/: color.rs  font.rs  metadata.rs  mod.rs  text.rs
crates/ferruginous-core/src/sublimation/: parser.rs
crates/ferruginous-doc/: Cargo.toml
crates/ferruginous-doc/src/: conformance.rs  document.rs  legacy.rs  lib.rs  page.rs  security.rs  signature.rs  validation.rs  xref.rs
crates/ferruginous-doc/src/font/: cmap.rs  encoding.rs  mod.rs  standard.rs
crates/ferruginous-doc/src/validation/: mod.rs  predicates.rs  tag_repair.rs
crates/ferruginous-mcp/: Cargo.toml
crates/ferruginous-mcp/src/: lib.rs  main.rs  server.rs
crates/ferruginous-mcp/src/tools/: audit.rs  mod.rs  render.rs  signature.rs
crates/ferruginous-render/: Cargo.toml
crates/ferruginous-render/examples/: visual_audit.rs
crates/ferruginous-render/src/: ctm.rs  headless.rs  lib.rs  path.rs  path_tests.rs  text.rs  text_tests.rs  visual_harness.rs
crates/ferruginous-render/tests/: phase4_verify.rs  visual_regression.rs
crates/ferruginous-sdk/: Cargo.toml
crates/ferruginous-sdk/benches/: parse_bench.rs
crates/ferruginous-sdk/examples/: debug_contents.rs  diag_layout.rs  diagnose_japanese.rs  diagnostic_render.rs  dump_cmap.rs  dump_page.rs  dump_page_ops.rs  dump_stream.rs  dump_text_cmds.rs  inspect_cid_map.rs  inspect_decoded_page2.rs  inspect_fonts.rs  inspect_open.rs  prepare_sample.rs  render_all_samples.rs  render_japanese_samples.rs  stream_dump.rs  upgrade_pdf.rs  validate_samples.rs  verify_step1_2.rs
crates/ferruginous-sdk/scratch/: diag_layout.rs  test_w2.rs  verify_step1_2.rs
crates/ferruginous-sdk/src/: annotation.rs  arlington.rs  catalog.rs  cloning.rs  cmap.rs  cmap_aj1.rs  colorspace.rs  content.rs  editor.rs  encoding.rs  filter.rs  font.rs  forms.rs  interpreter.rs  lexer.rs  lib.rs  loader.rs  metadata.rs  multimedia.rs  navigation.rs  obj_stm.rs  ocg.rs  page.rs  redaction.rs  remediation.rs  resolver.rs  resources.rs  search.rs  security.rs  shading_tess.rs  signature.rs  structure.rs  tests.rs  text.rs  text_layer.rs  trailer.rs  validator.rs  writer.rs  xref.rs
crates/ferruginous-sdk/src/arlington/: evaluator.rs  mod.rs  parser.rs
crates/ferruginous-sdk/src/core/: error.rs  mod.rs  string.rs  types.rs
crates/ferruginous-sdk/src/graphics/: mod.rs  query.rs
crates/ferruginous-sdk/src/interpreter/: font.rs  mod.rs
crates/ferruginous-sdk/src/interpreter/ops/: color.rs  marked.rs  mod.rs  paint.rs  path.rs  state.rs  text.rs  xobject.rs
crates/ferruginous-sdk/src/serialize/: mod.rs  object_stream.rs
crates/ferruginous-sdk/tests/: acroform_test.rs  annotation_edit_test.rs  colorspace_test.rs  dump_doc.rs  dump_ops.rs  editor_test.rs  forms_test.rs  generate_graphics_suite.rs  generate_sample_pdf.rs  graphics_extraction_test.rs  incremental_save_test.rs  m27s_font_verify.rs  metadata_compliance_test.rs  ocg_test.rs  rendering_test.rs  round_trip.rs  search_test.rs  serializer.rs  text_extraction_test.rs  text_positioning_test.rs
crates/ferruginous-ui/: Cargo.toml
crates/ferruginous-ui/scratch/: capture_ui.sh
crates/ferruginous-ui/src/: app.rs  main.rs  types.rs
crates/ferruginous-ui/src/sys/: bridge.rs  default.rs  macos.rs
crates/ferruginous-ui/src/widgets/: canvas.rs  header.rs  sidebar.rs
crates/ferruginous-upgrader/: Cargo.toml
crates/ferruginous-upgrader/src/: main.rs
crates/ferruginous-wasm/: Cargo.toml
crates/ferruginous-wasm/src/: lib.rs
crates/ferruginous/assets/locales/: en.json  ja.json
crates/ferruginous/src/: app.rs  cad_canvas.rs  command_palette.rs  export_wizard.rs  inspector.rs  interaction.rs  locale.rs  main.rs  redaction.rs  redaction_studio.rs  sidebar.rs  thumbnail_sidebar.rs  vello_egui.rs  view.rs  worker.rs
docs/: PROJECT_VISION.md  audit_report.md
examples/: create_jp_harness.rs  dump_page.rs  prepare_sample.rs
fepdf_test/: test_all.sh
logs/: msrv_log.txt
scripts/: batch_upgrade_pdf2.sh  msrv_check.sh  safety_vitals.sh  verify_compliance.sh  verify_secrets.sh  verify_style.sh  verify_visuals.sh  visual_regression.py
specs/: app_design.md  omissions.md  (+2 more)
(+170 files in other folders)
