[workspace]
resolver = "2"
members = [
    "crates/ferruginous-core",
    "crates/ferruginous-doc",
    "crates/ferruginous-render",
    "crates/ferruginous-sdk",
    "crates/ferruginous-mcp",
    "crates/ferruginous-bridge-legacy",
]

[workspace.dependencies]
thiserror = "2.0.11"
serde = { version = "1.0", features = ["derive", "rc"] }
tokio = { version = "1.43", features = ["full"] }
rmcp = "1.5.0"
vello = { git = "https://github.com/linebender/vello" }
kurbo = { version = "0.13", features = ["serde"] }
rayon = "1.10"
ttf-parser = "0.21"
lcms2 = "6.0"
bytes = { version = "1.10", features = ["serde"] }
flate2 = "1.0"
jpeg-decoder = "0.3.1"
roxmltree = "0.20"

[workspace.package]
version = "0.1.0"
authors = ["Ferruginous Developers"]
edition = "2024"
rust-version = "1.94"
license = "MIT"
repository = "https://github.com/akahmys/ferruginous"

[workspace.metadata.hirt]
integrity_level = "high"
compliance_standard = "ISO 32000-2:2020"
safety_protocol = "HDD-SR-01"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
all = { level = "warn", priority = -1 }
too_many_lines = "allow"
module_name_repetitions = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_lossless = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
if_not_else = "allow"
redundant_else = "allow"
unnecessary_wraps = "allow"
items_after_statements = "allow"
option_if_let_else = "allow"
collapsible_if = "allow"
collapsible_else_if = "allow"
doc_markdown = "allow"
must_use_candidate = "allow"
missing_const_for_fn = "allow"
match_same_arms = "allow"
single_match_else = "allow"
manual_let_else = "allow"
redundant_closure_for_method_calls = "allow"
or_fun_call = "allow"
used_underscore_binding = "allow"
unused_self = "allow"
type_complexity = "allow"
unreadable_literal = "allow"
use_self = "allow"
redundant_closure = "allow"
needless_pass_by_value = "allow"
trivially_copy_pass_by_ref = "allow"
similar_names = "allow"
needless_borrows_for_generic_args = "allow"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
