[workspace]
resolver = "2"
members = [
    "crates/ferruginous-core",
    "crates/ferruginous-render",
    "crates/ferruginous-sdk",
    "crates/ferruginous-mcp",
    "crates/ferruginous-wasm",
    "crates/ferruginous",
    "crates/fepdf",
    "crates/ferruginous-macros",
]

[workspace.dependencies]
# Error Handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
bytes = { version = "1.10", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Meta-programming
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

# Parallelism & Performance
rayon = "1.10"
parking_lot = "0.12"
id-arena = "2.2"

# PDF Physical Engine
lopdf = "0.34"
flate2 = "1.0"

# PDF Optimized Output
pdf-writer = "0.12"

# Font Processing
skrifa = "0.22"
read-fonts = "0.22"
ttf-parser = "0.21"

# Graphics & Rendering
vello = "0.8.0"
kurbo = { version = "0.13", features = ["serde"] }

# Color Management (Hardening)
moxcms = "0.8"

# Image Processing (Refined)
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "tiff"] }

# Metadata & Encoding
xmp-writer = "0.3"
roxmltree = "0.20"
chardetng = "0.1"

# Infrastructure & MCP
tokio = { version = "1.43", features = ["full"] }
rmcp = "1.5.0"

[workspace.package]
version = "1.0.0"
authors = ["Ferruginous Developers"]
edition = "2024"
rust-version = "1.94"
license = "MIT"
repository = "https://github.com/akahmys/ferruginous"

[workspace.metadata.hirt]
integrity_level = "high"
compliance_standard = "ISO 32000-2:2020"
safety_protocol = "HDD-SR-01"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
all = { level = "warn", priority = -1 }
too_many_lines = "allow"
cast_precision_loss = "warn"
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_possible_wrap = "warn"
cast_lossless = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
if_not_else = "allow"
redundant_else = "allow"
unnecessary_wraps = "allow"
items_after_statements = "allow"
option_if_let_else = "allow"
collapsible_if = "warn"
collapsible_else_if = "warn"
doc_markdown = "allow"
must_use_candidate = "allow"
missing_const_for_fn = "allow"
match_same_arms = "allow"
single_match_else = "allow"
manual_let_else = "allow"
redundant_closure_for_method_calls = "allow"
or_fun_call = "allow"
used_underscore_binding = "allow"
unused_self = "allow"
type_complexity = "allow"
unreadable_literal = "allow"
use_self = "allow"
redundant_closure = "allow"
needless_pass_by_value = "allow"
trivially_copy_pass_by_ref = "allow"
similar_names = "allow"
needless_borrows_for_generic_args = "allow"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
