[package]
name = "ferruginous-bridge-legacy"
version = "0.1.0"
edition = "2021"
description = "Legacy PDF bridge for Ferruginous, based on modified lopdf"
license = "MIT"

[dependencies]
bytes = { version = "1.9.0", features = ["serde"] }
thiserror = "2.0.11"
encoding_rs = "0.8.35"
md-5 = "0.10"
aes = "0.8"
cbc = "0.1"
nom = "7"
bitflags = "2"
linked-hash-map = "0.5"
# lopdf will be added/vendored later
