[package]
name = "ferruginous-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bytes.workspace = true
serde = { version = "1.0", features = ["derive", "rc"] }
thiserror.workspace = true
kurbo.workspace = true
flate2.workspace = true
jpeg-decoder.workspace = true

[dev-dependencies]
# Future test deps
