[package]
name = "ferruginous-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace managed
ferruginous-macros = { path = "../ferruginous-macros" }
bytes.workspace = true
serde.workspace = true
thiserror.workspace = true
kurbo.workspace = true
flate2.workspace = true
image.workspace = true
roxmltree.workspace = true
moxcms.workspace = true
xmp-writer.workspace = true
chardetng.workspace = true
rayon.workspace = true
lopdf.workspace = true
id-arena.workspace = true
skrifa.workspace = true
read-fonts.workspace = true
ttf-parser.workspace = true
parking_lot.workspace = true
pdf-writer.workspace = true

# Local only / specific
encoding_rs = "0.8"
aes = "0.8"
cbc = "0.1"
pbkdf2 = "0.12"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
md5 = "0.8.0"
nom = "7"
x509-parser = "0.16" 
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
der = { version = "0.7", features = ["derive"] }
spki = "0.7"
rustls-native-certs = "0.7"
rsa = { version = "0.9", features = ["sha2"] }
ecdsa = "0.16"
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
signature = "2.2"
sha1 = "0.10"

[dev-dependencies]
