[package]
name = "ferruginous-mcp"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ferruginous-sdk = { path = "../ferruginous-sdk" }
ferruginous-core = { path = "../ferruginous-core" }
rmcp = { workspace = true, features = ["macros", "server", "transport-io", "schemars"] }
tokio.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
thiserror.workspace = true
schemars = "1"
bytes = "1"

[lints]
workspace = true
