[package]
name = "ferruginous-render"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ferruginous-core = { path = "../ferruginous-core" }
vello.workspace = true
kurbo.workspace = true
wgpu = "=28.0.0"
serde.workspace = true
thiserror.workspace = true
bytes.workspace = true
skrifa.workspace = true
ttf-parser.workspace = true
image.workspace = true
pollster = "0.4"
tokio.workspace = true

[dev-dependencies]
ferruginous-sdk = { path = "../ferruginous-sdk" }
