[package]
name = "ferruginous-sdk"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ferruginous-core = { path = "../ferruginous-core" }
ferruginous-doc = { path = "../ferruginous-doc" }
ferruginous-render = { path = "../ferruginous-render" }
kurbo = { workspace = true }
thiserror.workspace = true
serde.workspace = true
bytes = { workspace = true }
image = "0.25"
tokio = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
