[package]
name = "ferruginous-sdk"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ferruginous-core = { path = "../ferruginous-core" }
ferruginous-render = { path = "../ferruginous-render" }
kurbo = { workspace = true }
thiserror.workspace = true
serde.workspace = true
bytes = { workspace = true }
roxmltree = { workspace = true }
image = "0.25"
tokio = { workspace = true }
pollster = "0.3"

[dev-dependencies]

[lints]
workspace = true
