[package]
name = "ferruginous-ui"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[dependencies]
ferruginous-sdk = { path = "../ferruginous-sdk" }
ferruginous-render = { path = "../ferruginous-render" }
eframe = { workspace = true, features = ["wgpu"] }
vello = "0.7.0"
wgpu = { version = "27.0.1", features = ["metal"] }
rfd = "0.15"
tauri = "=2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
egui-wgpu = { workspace = true }

[build-dependencies]
tauri-build = "=2.0.0"
