[package]
name = "ferruginous-upgrader"
version = "0.1.0"
authors = ["Ferruginous Developers"]
edition = "2024"
description = "Specialized CLI tool for converting PDF documents to version 2.0"

[dependencies]
ferruginous-sdk = { path = "../ferruginous-sdk" }
ferruginous-core = { path = "../ferruginous-core" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
bytes = { workspace = true }
