[package]
name = "ferruginous-wasm"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ferruginous-sdk = { path = "../ferruginous-sdk" }
ferruginous-core = { path = "../ferruginous-core" }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["CanvasRenderingContext2d", "ImageData", "Window", "Document", "HtmlCanvasElement"] }
console_error_panic_hook = "0.1"
serde-wasm-bindgen = "0.6"
tokio = { workspace = true }
bytes.workspace = true
wasm-bindgen-futures = "0.4.68"

[lints]
workspace = true
