[package]
name = "ferruginous"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ferruginous"
path = "src/main.rs"

[dependencies]
ferruginous-core = { path = "../ferruginous-core" }
ferruginous-render = { path = "../ferruginous-render" }
ferruginous-sdk = { path = "../ferruginous-sdk" }
vello.workspace = true
kurbo.workspace = true

egui = "0.34"
eframe = { version = "0.34", features = ["wgpu"] }
egui-wgpu = "0.34"
rfd = "0.15"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
pollster = "0.4"
bytes = { workspace = true }
log = "0.4"
env_logger = "0.11"
wgpu = "29" 
regex = "1.10" 

[lints]
workspace = true

